--- a/index.html
+++ b/index.html
@@ -77,6 +77,32 @@
 				</li>
 			</ul>
 	</div>
+	<div class="konten">
+			<h3>
+				Fahmi WFH, Rabu 8 Juni 2022
+			</h3>
+			<p>
+				<i>Berita Buana</i>
+			</p>
+			<ul>
+				<li>
+					<p>Bupati Karna Suswandi Luncurkan Program Pelayanan Kesehatan Gratis Bagi Pasien Mata Katarak</p>
+					<small>https://www.bhasafm.co.id/bupati-karna-suswandi-luncurkan-program-pelayanan-kesehatan-gratis-bagi-pasien-mata-katarak/</small>
+				</li>
+				<li>
+					<p>Bupati Karna Suswandi Luncurkan Program Pelayanan Kesehatan Gratis Bagi Pasien Mata Katarak</p>
+					<small>https://www.bhasafm.co.id/bupati-karna-suswandi-luncurkan-program-pelayanan-kesehatan-gratis-bagi-pasien-mata-katarak/</small>
+				</li>
+				<li>
+					<p>Pasien Mata Katarak Menangis Sambil Peluk Bupati Karna Suswandi</p>
+					<small>https://www.bhasafm.co.id/pasien-mata-katarak-menangis-sambil-peluk-bupati-karna-suswandi/</small>
+				</li>
+				<li>
+					<p>Cegah Virus PMK Meluas, Satgas Lakukan Penyekatan Pengiriman Hewan Ternak</p>
+					<small>https://www.bhasafm.co.id/cegah-virus-pmk-meluas-satgas-lakukan-penyekatan-pengiriman-hewan-ternak/</small>
+				</li>
+			</ul>
+	</div>
 
 </body>
 </html>
