Update selasa 14 Juni 2022 | berita buana

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
 </head>
 <body>
 <pre>
+*Fahmi WFH, Selasa 14 Juni 2022*
+_Berita Buana_
+- Jasad Pria Diduga Korban Pembunuhan Ternyata Seorang Sopir, Polisi Masih Dalami Penyebab Kematiannya
+https://www.bhasafm.co.id/jasad-pria-diduga-korban-pembunuhan-ternyata-seorang-sopir-polisi-masih-dalami-penyebab-kematiannya/
+
+- Operasi Patuh Semeru 2022 Sasar Delapan Pelanggaran Lalulintas di Jalan Raya
+https://www.bhasafm.co.id/operasi-patuh-semeru-2022-sasar-delapan-pelanggaran-lalulintas-di-jalan-raya/
+
+- Ulat Bulu Serang Perkantoran BPBD Turun Tangan
+https://www.bhasafm.co.id/ulat-bulu-serang-perkantoran-bpbd-turun-tangan/
+
+=============================================================================================
+
 *Fahmi WFH, Senin 13 Juni 2022*
 _Berita Buana_
 - Tutup Acara Mubes IKSASS, Kiai Azaim Minta Alumni Ponpes Sukorejo Pegang Teguh Kebersamaan
