--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
 </head>
 <body>
 <pre>
+*Fahmi WFH, Rabu 15 Juni 2022*
+_Berita Buana_
+- Mulai Terkuak, Jasad Sopir Ditemukan di Jalan Pantura Mlandingan Diduga Korban Perampokan
+https://www.bhasafm.co.id/mulai-terkuak-jasad-sopir-ditemukan-di-jalan-pantura-mlandingan-diduga-korban-perampokan/
+
+- Situbondo Darurat Wabah PMK, Tiga Pasar Hewan Ditutup Selama Dua Pekan
+https://www.bhasafm.co.id/situbondo-darurat-wabah-pmk-tiga-pasar-hewan-ditutup-selama-dua-pekan/
+
+- PPLS Bantu Material Tanah Urukan Bangun Kantor MWCNU Kota Situbondo
+https://www.bhasafm.co.id/ppls-bantu-material-tanah-urukan-bangun-kantor-mwcnu-kota-situbondo/
+
+=============================================================================================
+
 *Fahmi WFH, Selasa 14 Juni 2022*
 _Berita Buana_
 - Jasad Pria Diduga Korban Pembunuhan Ternyata Seorang Sopir, Polisi Masih Dalami Penyebab Kematiannya
