update buana 17 juni 2022

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
 </head>
 <body>
 <pre>
+*Fahmi WFH, Jum'at 17 Juni 2022*
+_Berita Buana_
+- Banjir Terjang Dua Lokasi Pesisir Pantai Situbondo
+https://www.bhasafm.co.id/banjir-terjang-dua-lokasi-pesisir-pantai-situbondo/
+
+- Mobil Incar Polres Situbondo Jaring 180 Pelanggar Lalulintas
+https://www.bhasafm.co.id/mobil-incar-polres-situbondo-jaring-180-pelanggar-lalulintas/
+
+- Kapolres Situbondo Lepas Ratusan Tukik di Pantai Bama Baluran
+https://www.bhasafm.co.id/kapolres-situbondo-lepas-ratusan-tukik-di-pantai-bama-baluran/
+
+=============================================================================================
+
 *Fahmi WFH, Rabu 15 Juni 2022*
 _Berita Buana_
 - Mulai Terkuak, Jasad Sopir Ditemukan di Jalan Pantura Mlandingan Diduga Korban Perampokan
