update buana 21 juni

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
 </head>
 <body>
 <pre>
+*Fahmi WFH, Selasa 21 Juni 2022*
+_Berita Buana_
+- Empat Jamaah Calon Haji Ditunda Keberangkatannya Karena Terpapar Covid-19
+https://www.bhasafm.co.id/empat-jamaah-calon-haji-ditunda-keberangkatannya-karena-terpapar-covid-19/
+
+- Liga Santri PSSI 2002 Bergulir, Empat Tim Perwakilan Pesantren Berebut Satu Tiket Berlaga di Korem
+https://www.bhasafm.co.id/liga-santri-pssi-2002-bergulir-empat-tim-perwakilan-pesantren-berebut-satu-tiket-berlaga-di-korem/
+
+- Dapur Rumah Terbakar, Tiga Ekor Kambing Ikut Terpanggang Api
+https://www.bhasafm.co.id/dapur-rumah-terbakar-tiga-ekor-kambing-ikut-terpanggang-api/
+
+=============================================================================================
+
 *Fahmi WFH, Senin 20 Juni 2022*
 _Berita Buana_
 - Satu Jam Sebelum Dibunuh, Tersangka dan Korban Sempat Makan Bersama
