--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
 </head>
 <body>
 <pre>
+*Fahmi WFH, Kamis 23 Juni 2022*
+_Berita Buana_
+- Produk Makanan UMKM Situbondo Merambah Pasar Modern
+https://www.bhasafm.co.id/produk-makanan-umkm-situbondo-merambah-pasar-modern/
+
+- PC ISNU Situbondo Buka Klinik Konsultasi Proses Produk Halal di Arena Gebyar UMKM
+https://www.bhasafm.co.id/pc-isnu-situbondo-buka-klinik-konsultasi-proses-produk-halal-di-arena-gebyar-umkm/
+
+- Kapolres Situbondo Sampaikan Santri Penghafal Quran  Dapat Priotitas Jadi Polisi
+https://www.bhasafm.co.id/kapolres-situbondo-sampaikan-santri-penghafal-quran-dapat-priotitas-jadi-polisi/
+
+- Terekam CCTV, Pelaku Pembakar Gudang di Sumberkolak Dibekuk Polisi
+https://www.bhasafm.co.id/terekam-cctv-pelaku-pembakar-gudang-di-sumberkolak-dibekuk-polisi/
+
+- Penyuluh Agama Islam dilatih membuat Video Kreatif
+https://www.bhasafm.co.id/penyuluh-agama-islam-dilatih-membuat-video-kreatif/
+
+=============================================================================================
+
 *Fahmi WFH, Rabu 22 Juni 2022*
 _Berita Buana_
 - Api Obor Porprov VII Jatim 2022 Dikirab Keliling Situbondo
