--- a/index.html
+++ b/index.html
@@ -26,9 +26,24 @@
 </head>
 <body>
 <pre>
+*Fahmi WFH, Kamis 14 Juli 2022*
+_Berita Buana_
 
+- Awal Agustus Dimulai Pendaftaran Bakal Calon Kepala Desa
+https://www.bhasafm.co.id/awal-agustus-dimulai-pendaftaran-bakal-calon-kepala-desa/
+
+- Anggota Ungkap Kasus Pembunuhan Sopir Truk asal NTB Terima Penghargaan
+https://www.bhasafm.co.id/anggota-ungkap-kasus-pembunuhan-sopir-truk-asal-ntb-terima-penghargaan/
+
+- Pencuri Kambing Terekam CCTV Diburu Polisi
+https://www.bhasafm.co.id/pencuri-kambing-terekam-cctv-diburu-polisi/
+
+- Para Nelayan Istirahat Melaut Saat Musim Terang Bulan
+https://www.bhasafm.co.id/para-nelayan-istirahat-melaut-saat-musim-terang-bulan/
 *Fahmi WFH, Jum'at 8 Juli 2022*
 _Berita Buana_
+
+=============================================================================================
 
 - Proyek Fisik Dana PEN Tak Segera Dikerjakan, Sejumlah Aktifis Ancam Ajukan Gugatan
 https://www.bhasafm.co.id/proyek-fisik-dana-pen-tak-segera-dikerjakan-sejumlah-aktifis-ancam-ajukan-gugatan/
