--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ https://www.bhasafm.co.id/para-nelayan-istirahat-melaut-saat-musim-terang-bulan/
 _Berita Buana_
 
 =============================================================================================
+*Fahmi WFH, Jum'at 8 Juli 2022* 
+_Berita Buana_
 
 - Proyek Fisik Dana PEN Tak Segera Dikerjakan, Sejumlah Aktifis Ancam Ajukan Gugatan
 https://www.bhasafm.co.id/proyek-fisik-dana-pen-tak-segera-dikerjakan-sejumlah-aktifis-ancam-ajukan-gugatan/
@@ -58,6 +60,7 @@ https://www.bhasafm.co.id/pemkab-situbondo-alokasikan-anggaran-rp-15-miliar-tang
 
 *Fahmi WFH, Kamis 7 Juli 2022*
 _Berita Buana_
+
 - Heboh, Kematian Nenek di Jangkar Dinilai Tidak Wajar
 https://www.bhasafm.co.id/heboh-kematian-nenek-di-jangkar-dinilai-tidak-wajar/
 
