--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 </head>
 <body>
 <pre>
+*Fahmi WFH, Jum'at 15 Juli 2022*
+_Berita Buana_
+- Ditemukan 25 Penderita HIV AIDS Baru, Dinkes Ingatkan Bahaya Seks Bebas
+https://www.bhasafm.co.id/ditemukan-25-penderita-hiv-aids-baru-dinkes-ingatkan-bahaya-seks-bebas/
+
+- Dinas Peternakan Libatkan Kades Data Ternak Sakit dan Mati PMK
+https://www.bhasafm.co.id/dinas-peternakan-libatkan-kades-data-ternak-sakit-dan-mati-pmk/
+
+=============================================================================================
+
 *Fahmi WFH, Kamis 14 Juli 2022*
 _Berita Buana_
 
