--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
 </head>
 <body>
 <pre>
+*Fahmi WFH, Senin 18 Juli 2022*
+_Berita Buana_
+- Polres Situbondo Ungkap Kasus Pembunuhan Nenek 75 Tahun, Pelakunya Anak Kandungnya Sendiri
+https://www.bhasafm.co.id/polres-situbondo-ungkap-kasus-pembunuhan-nenek-75-tahun-pelakunya-anak-kandungnya-sendiri/
+
+- Pendaftaran Parpol Peserta Pemilu 2024 Dimulai 29 Juli
+https://www.bhasafm.co.id/pendaftaran-parpol-peserta-pemilu-2024-dimulai-29-juli/
+
+- Sensasi Melihat Ribuan Burung Bangau di Kampung Blekok Saat Pagi Hari
+https://www.bhasafm.co.id/sensasi-melihat-ribuan-burung-bangau-di-kampung-blekok-saat-pagi-hari/
+
+=============================================================================================
+
 *Fahmi WFH, Jum'at 15 Juli 2022*
 _Berita Buana_
 - Ditemukan 25 Penderita HIV AIDS Baru, Dinkes Ingatkan Bahaya Seks Bebas
