--- a/index.html
+++ b/index.html
@@ -25,7 +25,21 @@
 	</style>
 </head>
 <body>
+<h1>Juli</h1>
 <pre>
+*Fahmi WFH, Selasa 19 Juli 2022*
+_Berita Buana_
+- Rumah dan Gudang Kerupuk Terbakar, Kerugian Ditaksir Ratusan Juta
+https://www.bhasafm.co.id/rumah-dan-gudang-kerupuk-terbakar-kerugian-ditaksir-ratusan-juta/
+
+- Kapolres Situbondo Minta Para Kapolsek Petakan Gangguan Kamtibmas Jelang Pilkades Serentak
+https://www.bhasafm.co.id/kapolres-situbondo-minta-para-kapolsek-petakan-gangguan-kamtibmas-jelang-pilkades-serentak/
+
+- Polisi Amankan 19 Motor Protolan Dari Arena Balapan Liar
+https://www.bhasafm.co.id/polisi-amankan-19-motor-protolan-dari-arena-balapan-liar/
+
+=============================================================================================
+
 *Fahmi WFH, Senin 18 Juli 2022*
 _Berita Buana_
 - Polres Situbondo Ungkap Kasus Pembunuhan Nenek 75 Tahun, Pelakunya Anak Kandungnya Sendiri
