--- a/index.html
+++ b/index.html
@@ -27,6 +27,74 @@
 <body>
 <h1>Juli</h1>
 <pre>
+==============================================================================================
+
+*Fahmi WFH, Sabtu 30 Juli 2022*
+_Form Client_
+
+Parenting Islami
+link : s.id/parentingislami
+
+=============================================================================================
+
+*Fahmi WFH, Jum'at 29 Juli 2022*
+_Lagu_
+
+Feby - Runtuh
+link : https://drive.google.com/file/d/1kuCYR8fgY3EHnXdw2gkojpRtNImBEx7h/view?usp=sharing
+
+=============================================================================================
+
+*Fahmi WFH, Kamis 28 Juli 2022*
+_Lagu_
+
+Feby - Jika
+link : https://drive.google.com/file/d/1i0tGLncfJzVYtHpaQU_PcB00IgzLwOTj/view?usp=sharing
+
+=============================================================================================
+
+*Fahmi WFH, Rabu 27 Juli 2022*
+_Lagu_
+
+Feby - Celengan rindu
+link : https://drive.google.com/file/d/16GaaJaleNq9O5--OKfVcA-x_TT9aW5tv/view?usp=sharing
+
+=============================================================================================
+
+*Fahmi WFH, Selasa 26 Juli 2022*
+_Lagu_
+
+Feby - Bicara
+link : https://drive.google.com/file/d/1LUCAgod0lJoQL_ZsWiN-uRn3EENK1i9c/view?usp=sharing
+
+=============================================================================================
+
+*Fahmi WFH, Senin 25 Juli 2022*
+_Lagu_
+
+Feby - Halu
+link : https://drive.google.com/file/d/1fPFM0iRKR4BVgni0ssj7LLioFvz7ffEH/view?usp=sharing
+
+=============================================================================================
+
+*Fahmi WFH, Sabtu 23 Juli 2022*
+_Lagu Akustik_
+
+Tami_Aulia_PART_07
+link : https://drive.google.com/file/d/1sun3aKHWtKddIUqjRieGBFWK8Bcz7Ewx/view?usp=sharing
+password : okiun2178
+
+=============================================================================================
+
+*Fahmi WFH, Jum'at 22 Juli 2022*
+_Lagu Akustik_
+
+Tami_Aulia_PART_06
+link : https://drive.google.com/file/d/1q72BhoD6-8TRqX4_XjbGasJ14c3Tv4pi/view?usp=sharing
+password : dsai0879o
+
+==============================================================================================
+
 *Fahmi WFH, Kamis 21 Juli 2022*
 _Berita Buana_
 - Kejaksaan Negeri Situbondo Tahan Enam Tersangka Dugaan Korupsi UKL UPL
@@ -80,6 +148,15 @@ https://www.bhasafm.co.id/pendaftaran-parpol-peserta-pemilu-2024-dimulai-29-juli
 - Sensasi Melihat Ribuan Burung Bangau di Kampung Blekok Saat Pagi Hari
 https://www.bhasafm.co.id/sensasi-melihat-ribuan-burung-bangau-di-kampung-blekok-saat-pagi-hari/
 
+==============================================================================================
+
+*Fahmi WFH, Sabtu 16 Juli 2022*
+_Lagu Akustik_
+
+Tami_Aulia_PART_05
+link : https://drive.google.com/file/d/1lu4E_DWPUaF0PhVueL6L332b3NsZAFwI/view?usp=sharing
+password : y217td3ud
+
 =============================================================================================
 
 *Fahmi WFH, Jum'at 15 Juli 2022*
@@ -107,9 +184,45 @@ https://www.bhasafm.co.id/pencuri-kambing-terekam-cctv-diburu-polisi/
 - Para Nelayan Istirahat Melaut Saat Musim Terang Bulan
 https://www.bhasafm.co.id/para-nelayan-istirahat-melaut-saat-musim-terang-bulan/
 
+==============================================================================================
+
+*Fahmi WFH, Rabu 13 Juli 2022*
+_Lagu Akustik_
+
+Tami_Aulia_PART_04
+link : https://drive.google.com/file/d/1uxWzpiBt5gbPPDXRF7wuo6BNMAKp08A9/view?usp=sharing
+password : khkmu1290
+
 =============================================================================================
 
-*Fahmi WFH, Jum'at 8 Juli 2022* 
+*Fahmi WFH, Selasa 12 Juli 2022*
+_Lagu Akustik_
+
+Tami_Aulia_PART_03
+link : https://drive.google.com/file/d/1cjC6HiN5UhnJfq7-UJEMo3oBz11NIoaG/view?usp=sharing
+password : hddh21h12
+
+=============================================================================================
+
+*Fahmi WFH, Senin 11 Juli 2022*
+_Lagu Akustik_
+
+Tami_Aulia_PART_02
+link : https://drive.google.com/file/d/1QqG4O71wyhDdLOwN5jY1TA_NxiX7p2xF/view?usp=sharing
+password : u8y723882
+
+=============================================================================================
+
+*Fahmi WFH, Sabtu 9 Juli 2022*
+_Lagu Akustik_
+
+Tami_Aulia_PART_01
+link : https://drive.google.com/file/d/12d_UAwNP-HLfF1A8vWjpkqHu3V41E3d2/view?usp=sharing
+password : dwq212fsd
+
+=============================================================================================
+
+*Fahmi WFH, Jum'at 8 Juli 2022*
 _Berita Buana_
 
 - Proyek Fisik Dana PEN Tak Segera Dikerjakan, Sejumlah Aktifis Ancam Ajukan Gugatan
@@ -125,7 +238,6 @@ https://www.bhasafm.co.id/pemkab-situbondo-alokasikan-anggaran-rp-15-miliar-tang
 
 *Fahmi WFH, Kamis 7 Juli 2022*
 _Berita Buana_
-
 - Heboh, Kematian Nenek di Jangkar Dinilai Tidak Wajar
 https://www.bhasafm.co.id/heboh-kematian-nenek-di-jangkar-dinilai-tidak-wajar/
 
