--- a/index.html
+++ b/index.html
@@ -25,9 +25,33 @@
 	</style>
 </head>
 <body>
+<h1>Agustus</h1>
+<pre>
+=============================================================================================
+
+*Fahmi WFH, Senin 1 Agustus 2022*
+_Berita Buana_
+- Bumikan Nilai Pancasila, Jejaring Panca Mandala Situbondo Bikin Tagline Pelajar Pancasila Situbondo
+https://www.bhasafm.co.id/bumikan-nilai-pancasila-jejaring-panca-mandala-situbondo-bikin-tagline-pelajar-pancasila-situbondo/
+
+- Kepala BPIP RI Ingatkan Lima Persoalan Ancaman Kebangsaan
+https://www.bhasafm.co.id/kepala-bpip-ri-ingatkan-lima-persoalan-ancaman-kebangsaan/
+
+- Lomba Ayam Sap-Sap Jadi Tontonan Pengunjung Wisata Pasir Putih
+https://www.bhasafm.co.id/lomba-ayam-sap-sap-jadi-tontonan-pengunjung-wisata-pasir-putih/
+
+- Ratusan Pemancing Antusias Ikut Mancing Bareng  Bung Karna di Objek Wisata Pasir Putih Situbondo
+https://www.bhasafm.co.id/ratusan-pemancing-antusias-ikut-mancing-bareng-bung-karna-di-objek-wisata-pasir-putih-situbondo/
+
+=============================================================================================
+</pre>
+<br>
+<br>
+<br>
+<br>
 <h1>Juli</h1>
 <pre>
-==============================================================================================
+=============================================================================================
 
 *Fahmi WFH, Sabtu 30 Juli 2022*
 _Form Client_
