--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		body{
 			font-family: 'Whois', sans-serif;
-			background-color: black;
+			background-color: #2b524e;
 			color: white;
 		}
 
