nambah href catatan

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		<tr>
 			<td>API source</td>
 			<td>: <a href="https://fahmiwork.pythonanywhere.com/work/api.json" target="_blank" style="color: white;">https://fahmiwork.pythonanywhere.com/work/api.json</a></td>
+			<td>: <a href="https://github.com/fahmiaditia-work/fahmiaditia-work.github.io/blob/main/Fahmi_WFH.txt">Catatan .txt WFH</td>
 		</tr>
 	</table>
 	<br>
